plugins {
    id 'java'
    id 'application'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

repositories {
    mavenCentral()
    google()
}

dependencies {
    implementation(project(':sweeteditor'))
    implementation 'com.qiplat:sweetline-ffm:1.1.1'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

application {
    mainClass = 'com.qiplat.sweeteditor.demo.Main'
    def osName = System.getProperty('os.name').toLowerCase()
    def nativeLibSubDir
    if (osName.contains('windows')) {
        nativeLibSubDir = '../../cmake-build-debug-visual-studio/bin/Debug'
    } else if (osName.contains('mac')) {
        nativeLibSubDir = '../../build/lib'
    } else {
        throw new GradleException("Unsupported OS for Swing demo nativeLibDir: ${System.getProperty('os.name')}")
    }
    def nativeLibDir = rootProject.projectDir.toPath().resolve(nativeLibSubDir).toAbsolutePath().normalize().toString()
    def demoResDir = rootProject.projectDir.toPath().resolve('../_res').toAbsolutePath().normalize().toString()
    applicationDefaultJvmArgs = [
            '--enable-preview',
            '--enable-native-access=ALL-UNNAMED',
            "-Djava.library.path=${nativeLibDir}",
            "-Dsweeteditor.lib.path=${nativeLibDir}",
            "-Dsweeteditor.demo.res.dir=${demoResDir}"
    ]
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview', '--enable-native-access=ALL-UNNAMED'
}
